# academy-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
app/ai/: agent.py
app/routers/: assessments.py  events.py  formula_components.py  insights.py  subjects.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AutoInsight.jsx  EventModal.jsx  Sidebar.jsx  SubjectModal.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  dialog.jsx  input.jsx  label.jsx  select.jsx  separator.jsx  textarea.jsx
frontend/src/lib/: api.js  utils.js
frontend/src/pages/: CalendarPage.jsx  Dashboard.jsx  InsightsPage.jsx  SubjectDetail.jsx
