[project]
name = "academic-tracker"
version = "0.1.0"
description = "Sistema de acompanhamento acadêmico com IA local"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.31",
    "langchain>=0.2.6",
    "langchain-ollama>=0.1.1",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.6",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
